tests/matrices/invalid/invalid_missing_value_2.mtx
%%MatrixMarket matrix coordinate double general
3 3 3
2 1
3 1 45
3 2 4
